--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "inquirer": "^8.2.2",
     "mysql2": "^2.2.5"
   },
   "scripts": {
